# Drone-Simulator

./: CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/drone/: drone.cpp  drone.h  dronedata.cpp  dronedata.h
src/logging/: logger.cpp  logger.h
src/movement/: hoverstrategy.cpp  hoverstrategy.h  movementstrategy.cpp  movementstrategy.h  randomwalkstrategy.cpp  randomwalkstrategy.h
src/observer/: observer.cpp  observer.h
src/simulation/: dronesimulator.cpp  dronesimulator.h  simulationfactory.cpp  simulationfactory.h
tests/: test_logger.cpp  test_movement.cpp  test_simulation.cpp
